# DRUPI

./: .gitignore  .gitmodules  README.md
DATM_FD/: .gitignore  environment.yaml  networks.py  reparam_module.py
DATM_FD/buffer/: buffer_temp.py
DATM_FD/distill/: DATM.py  DATM_debug.py  DATM_feat.py  DATM_nowandb.py  DATM_nowandb_hflip.py  DATM_ours.py  DATM_ours_hflip.py  DATM_pre.py  (+2 more)
DATM_before/: environment.yaml  networks.py  reparam_module.py
DC/: DCmain3.0.py  DM.py  attack_optim.py  feature_metric.py  main.py  main_DC.py  main_DM.py  main_addCE.py  main_attack.py  main_backup.py  main_contrastive.py  main_cross.py  main_feat.py  main_pre.py  main_pre_y.py  main_pruning.py  main_select.py  main_separate.py  main_spatial.py  network_backup.py  network_cross.py  networks.py  pretrain.py  process_file.py  readme.md  requirements.txt  test.py  utils.py  utils_backup.py  utils_cross.py
DC/batch_invariant_ops/: LICENSE  README.md  deterministic_vllm_inference.py  pyproject.toml  test_batch_invariance.py
DC/batch_invariant_ops/batch_invariant_ops/: batch_invariant_ops.py
DatasetFactorization/: distill_fac.py  run_cifar10_ipc10_style5.sh
IDC/: 1.sh  README.md  argument.py  condense.py  condense_fd copy.py  condense_fd.py  condense_fd_wsb.py  condense_mp.py  condense_mp_fd.py  condense_mp_fd_decodeN.py  condense_temp.py  data.py  debug.sh  pretrain.py  temp.py  test.py  train.py
MTT_FD/: distill.py  distill_ori.py  distill_pre.py  distill_tta.py  environment.yml  eval.py  networks.py  readme.md  reparam_module.py  utils.py  utils_ori.py  utils_tta.py
(+80 files in other folders)
